# Rusty-Jack

./: .gitattributes  .gitignore  AGENTS.md  BUILD_FIXES_APPLIED.md  BUTTON_FIX.md  CLAUDE.md  COMPILATION_FIXES.md  COMPLETE_IMPLEMENTATION_REPORT.md  Cargo.toml  DAEMON_COMPLETION_IMPLEMENTATION.md  DAEMON_IMPLEMENTATION_ROADMAP.md  DAEMON_IMPLEMENTATION_STATUS_UPDATE.md  DAEMON_INTERACTIONS_ANALYSIS.md  DEAUTH_ATTACK_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DISPLAY_DIAGNOSTIC.md  DISPLAY_FIX_ALTERNATIVES.md  DISPLAY_FIX_README.md  DISPLAY_VARIANTS.rs  DOCKER_FIX_500_ERROR.md  DOCKER_WINDOWS_SETUP.md  HARDWARE_DETECTION_FEATURE.md  HARDWARE_ISOLATION_SPEC.md  HOTSPOT_FIXES.md  IMPLEMENTATION_NEXT_STEPS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  LOOT_VIEWER_ARCHITECTURE.md  LOOT_VIEWER_GUIDE.md  LOOT_VIEWER_IMPLEMENTATION.md  Logging_report_progress.md  PI_ZERO_INSTALL.md  PROJECT_DETAILS.txt  PROJECT_REVIEW.md  README.md  SYSTEMATIC_FIX_PLAN.md  TESTING.md  WARNING_FIXES.md  WAVESHARE_BUTTONS.md  (+36 more)
.claude/: settings.local.json
.githooks/: pre-commit
Rustyjack/: 99-rustyjack-wifi.rules  AGENTS.md  LOGGING_USB_RUST_ONLY_PLAN.md  PREFLIGHT_AUDIT.txt  SYSTEMATIC_FIX_PLAN.md  rustyjack-portal.service
Rustyjack/rustyjack-daemon/: Cargo.toml
Rustyjack/rustyjack-daemon/src/: dispatch.rs  main.rs  validation.rs
Rustyjack/rustyjack-daemon/src/jobs/: mod.rs
Rustyjack/rustyjack-daemon/src/jobs/kinds/: hotspot_start.rs
ci/: async_blocking_allowlist.txt  forbid_command_new.rs  no_blocking_in_async.rs  no_new_unwrap_expect.rs
crates/rustyjack-updater/: Cargo.toml
crates/rustyjack-updater/src/: lib.rs
deep analysis docs/: Area14_AntiForensics_DestructiveOps_Report.md  area0_rustyjack_architecture_analysis_plan.md  area11_captive_portal_dnsspoof_report.md  area12_loot_management_encryption_export_report.md  area16_observability_report.md  area1_platform_system_integration_1_report.md  (+5 more)
rustyjack-portal/: Cargo.toml
rustyjack-portal/src/: lib.rs  logging.rs  server.rs
(+430 files in other folders)
