[package]
name = "rustyjack-portal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time", "sync", "signal", "fs", "io-util"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["fs", "limit", "timeout"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rustyjack-netlink = { path = "../rustyjack-netlink" }
