[package]
name = "rustyjack-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustyjackd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"

[dependencies.rustyjack-ipc]
path = "../rustyjack-ipc"

[dependencies.rustyjack-core]
path = "../rustyjack-core"
