[package]
name = "rustyjack-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["fs", "io-util", "rt"] }
futures-util = "0.3"
tar = "0.4"
zstd = "0.13"
zbus = "4.0"
